# ai-pronunciation-trainer

./: Dockerfile  RuleBasedModels.py  WordMatching.py  WordMetrics.py  lambdaGetSample.py  lambdaSpeechToScore.py  models.py  pronunciationTrainer.py  requirements.txt  samconfig.toml  template.yaml  whisper_api_wrapper.py  whisper_wrapper.py
.aws-sam/: build.toml
static/javascript/: callbacks.js
whisper_base/: local_test.py  pyproject.toml  requirements.txt  test.py  whisper-inference-deploy.ipynb
whisper_base/src/: config.properties  inference.py  requirements.txt
